<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Музеи Адыгеи</string>
    <string name="Language">Смена языка</string>
    <string name="Play">Играть</string>
    <string name="Exit">Выход</string>
    <string name="Title">Войти в аккаунт</string>
    <string name="Log_type">Введите логин</string>
    <string name="Pass_type">Введите пароль</string>
    <string name="Log_button">Войти</string>
    <string name="Reg_button">Зарегистрироваться</string>
    <string name="Question_title">Что изображено на картинке?</string>
    <string name="Question_title_1">Что изображено на картинке?</string>
    <string name="Question_title_2">Что изображено на картинке?</string>
    <string name="Question_title_3">Что изображено на картинке?</string>
    <string name="Question_title_4">Что изображено на картинке?</string>
    <string name="Option_1">Экмпозиция филиал Национального музея Республики Адыгея</string>
    <string name="Option_2">Экмпозиция филиал Республики Адыгея</string>
    <string name="Option_3">Арка</string>
    <string name="Option_4">Экмпозиция Зарубежного ландшафта</string>
    <string name="Option_5">Экмпозиция Ландшафта Адыгеи</string>
    <string name="Option_6">Кабан</string>
    <string name="Option_7">Экспозиция Культура и быт адыгов в конце ХVIII – начале ХIХ вв</string>
    <string name="Option_8">Экспозиция Культура и быт адыгов в конце ХVII – начале ХХ вв</string>
    <string name="Option_9">Музей</string>
    <string name="Option_10">Мушкеты</string>
    <string name="Option_11">Т-34</string>
    <string name="Option_12">Экспонат Вооружение адыгского воина с древнейших времен до нового времени</string>
    <string name="Option_13">Композиция камни</string>
    <string name="Option_14">Экспонат Меловая фауна из коллекции В.Л. Егояна</string>
    <string name="Option_15">Картина с комнями</string>
    <string name="Further_1">Дальше</string>
    <string name="Further_2">Дальше</string>
    <string name="Further_3">Дальше</string>
    <string name="Further_4">Дальше</string>
    <string name="complete_1">Завершить тест</string>
    <string name="good_1">хорошо</string>
    <string name="Question_title_5">Что изображено на картинке?</string>
    <string name="Question_title_6">Что изображено на картинке?</string>
    <string name="Question_title_7">Что изображено на картинке?</string>
    <string name="Question_title_8">Что изображено на картинке?</string>
    <string name="complete_2">Закончить тест</string>
    <string name="Option_16">Старинная записная книжка</string>
    <string name="Option_17">Книга приколов</string>
    <string name="Option_18">Дневник победы</string>
    <string name="Option_19">Вышивка</string>
    <string name="Option_20">Отблески радости. Ткани и вышивки индии</string>
    <string name="Option_21">Просто красиво</string>
    <string name="Option_22">Пейзаж 20 вв.</string>
    <string name="Option_23">Картина маслом</string>
    <string name="Option_24">Россия ближе к востоку</string>
    <string name="Option_25">Пес</string>
    <string name="Option_26">Ахеменидский след в северном причерноморье</string>
    <string name="Option_27">It is butiful</string>
    <string name="good_2">хорошо</string>
    <string name="Further_5">Дальше</string>
    <string name="Further_6">Дальше</string>
    <string name="Further_7">Дальше</string>
    <string name="Question_title_9">Кто проживал в этом доме?</string>
    <string name="Question_title_10">Когда завершились реставрационные работы Усадьбы братьев Соловьевых?</string>
    <string name="Question_title_11">В каком веке был построен дом Соловьевых?</string>
    <string name="Question_title_12">С какого года здесь жила семья Василия Федоровича Соловьева?</string>
    <string name="Question_title_13">Кем были братья Соловьевы?</string>
    <string name="complete_3">Завершить тест</string>
    <string name="good_3">хорошо</string>
    <string name="Option_28">Соловьевы</string>
    <string name="Option_29">Грачевы</string>
    <string name="Option_30">Игнатьевы</string>
    <string name="Option_31">2021</string>
    <string name="Option_32">2017</string>
    <string name="Option_33">2018</string>
    <string name="Option_34">XXI</string>
    <string name="Option_35">XXII</string>
    <string name="Option_36">XIX</string>
    <string name="Option_38">1764</string>
    <string name="Option_39">1894</string>
    <string name="Option_40">1895</string>
    <string name="Option_41">Врачами</string>
    <string name="Option_42">Космонавты</string>
    <string name="Option_43">Музыкантами</string>
    <string name="Further_8">Дальше</string>
    <string name="Further_9">Дальше</string>
    <string name="Further_10">Дальше</string>
    <string name="Further_11">Дальше</string>
    <string name="Question_title_14">Что изображено на картинке?</string>
    <string name="Question_title_15">Что изображено на картинке?</string>
    <string name="Question_title_16">Что изображено на картинке?</string>
    <string name="complete_4">Закончить тест</string>
    <string name="good_4">хорошо</string>
    <string name="Option_44">Картина А.М. БЕРСИРОВА</string>
    <string name="Option_45">Экмпозиция Республики Адыгея</string>
    <string name="Option_46">Картина Мельника</string>
    <string name="Option_47">Картина газета</string>
    <string name="Option_48">Замок</string>
    <string name="Option_49">Картина А.М. БЕРСИРОВА</string>
    <string name="Option_50">Экспозиция мадины саральп</string>
    <string name="Option_51">Экспозиция Культура и быт адыгов в конце ХVII – начале ХХ вв</string>
    <string name="Option_52">Народный костюм</string>
    <string name="Further_12">Дальше</string>
    <string name="Further_13">Дальше</string>
    <string name="Create_title">Создание аккаунта</string>
    <string name="Create_log">Введите логин</string>
    <string name="Create_em">Введите email</string>
    <string name="Create_pass">Введите пароль</string>
    <string name="Log_transition">Авторизоваться</string>
    <string name="Select_title">Тесты по музеям Республики Адыгея</string>
    <string name="Title_muziem_1">Национальный музей \n Республики Адыгея</string>
    <string name="Title_muziem_2">Музей искусства народов востока</string>
    <string name="Title_muziem_3">Дом братьев Соловьёвых</string>
    <string name="Title_muziem_4">Картинная галерея</string>
    <string name="Title_muziem_5">Адыгейский республиканский \n краеведческий музей</string>
    <string name="Title_muziem_6">Историческая комната</string>
    <string name="Title_muziem_7">Литературный музей \n Тембота Керашева</string>
    <string name="Title_muziem_8">Народный музей геометрия живого</string>
    <string name="Create_button">Регистрация</string>
    <string name="Finish_5">Тест находится в разработке</string>
    <string name="Cencel_5">Назад</string>
    <string name="Cencel_6">Назад</string>
    <string name="Cencel_7">Назад</string>
    <string name="Cencel_8">Назад</string>
    <string name="Finish_6">Тест находится в разработке</string>
    <string name="Finish_7">Тест находится в разработке</string>
    <string name="Finish_8">Тест находится в разработке</string>
    <string name="Title_select_pol">Выберите ваш пол</string>
    <string name="Title_select_man">Выберите персонажа</string>
    <string name="Title_select_woman">Выберите персонажа</string>
    <string name="btn_woman">вперед</string>
    <string name="btn_man">вперед</string>
    <string name="Table">Таблица</string>
    <string name="Lattice">В разработке😅</string>
    <string name="Title_table">Таблица лидеров🏆</string>
</resources>