<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Muzei3"
    android:background="@drawable/bg">

    <ImageView
        android:id="@+id/imageView40"
        android:layout_width="228dp"
        android:layout_height="82dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img" />

    <ImageView
        android:id="@+id/imageView50"
        android:layout_width="228dp"
        android:layout_height="82dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img2" />

    <ImageView
        android:id="@+id/imageView60"
        android:layout_width="53dp"
        android:layout_height="194dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918"
        app:srcCompat="@drawable/img4" />

    <ImageView
        android:id="@+id/imageView70"
        android:layout_width="53dp"
        android:layout_height="194dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView60"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146"
        app:srcCompat="@drawable/img5" />

    <ImageView
        android:id="@+id/imageView90"
        android:layout_width="53dp"
        android:layout_height="194dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081"
        app:srcCompat="@drawable/img4" />

    <ImageView
        android:id="@+id/imageView80"
        android:layout_width="53dp"
        android:layout_height="194dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView90"
        app:layout_constraintVertical_bias="0.853"
        app:srcCompat="@drawable/img5" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Question_title_9"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157"/>

    <com.example.testappmuzei2.RoundImageView
        android:id="@+id/imageView1"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.08"
        app:srcCompat="@drawable/vopros13"
        />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="200dp"
        android:layout_height="140dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView1"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/imageView1"
        app:layout_constraintTop_toBottomOf="@+id/imageView1"
        >

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Option_28" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Option_29" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Option_30" />

    </RadioGroup>

    <Button
        android:background="@drawable/custom_button_2"
        android:id="@+id/button1"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:text="@string/Further_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup1"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="@+id/radioGroup1"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup1"
        app:layout_constraintVertical_bias="0.406" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:text="@string/Question_title_10"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158"
        android:visibility="invisible"/>

    <com.example.testappmuzei2.RoundImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:visibility="invisible"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.06"
        app:srcCompat="@drawable/vopros23" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="200dp"
        android:layout_height="140dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:visibility="invisible">

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Option_31" />

        <RadioButton
            android:id="@+id/radio5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Option_32" />

        <RadioButton
            android:id="@+id/radio6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Option_33" />

    </RadioGroup>

    <Button
        android:background="@drawable/custom_button_2"
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:text="@string/Further_9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup2"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        app:layout_constraintVertical_bias="0.406"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="247dp"
        android:layout_height="132dp"
        android:textAlignment="center"
        android:text="@string/Question_title_11"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157"
        android:visibility="invisible"/>

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:visibility="invisible">

        <RadioButton
            android:id="@+id/radio7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Option_34" />

        <RadioButton
            android:id="@+id/radio8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Option_35" />

        <RadioButton
            android:id="@+id/radio9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Option_36" />

    </RadioGroup>

    <Button
        android:background="@drawable/custom_button_2"
        android:id="@+id/button3"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:text="@string/Further_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup3"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="@+id/radioGroup3"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3"
        app:layout_constraintVertical_bias="0.406"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="279dp"
        android:layout_height="129dp"
        android:textAlignment="center"
        android:text="@string/Question_title_12"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157"
        android:visibility="invisible"/>

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="100dp"
        android:layout_height="170dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:visibility="invisible">

        <RadioButton
            android:id="@+id/radio10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Option_38" />

        <RadioButton
            android:id="@+id/radio11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Option_39" />

        <RadioButton
            android:id="@+id/radio12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Option_40" />

    </RadioGroup>

    <Button
        android:background="@drawable/custom_button_2"
        android:id="@+id/button4"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:text="@string/Further_11"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup4"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="@+id/radioGroup4"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4"
        app:layout_constraintVertical_bias="0.406"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="279dp"
        android:layout_height="53dp"
        android:text="@string/Question_title_13"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157"
        android:visibility="invisible"/>


    <RadioGroup
        android:id="@+id/radioGroup5"
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:layout_marginTop="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:visibility="invisible">

        <RadioButton
            android:id="@+id/radio13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Option_41" />

        <RadioButton
            android:id="@+id/radio14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Option_42" />

        <RadioButton
            android:id="@+id/radio15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Option_43" />

    </RadioGroup>

    <Button
        android:background="@drawable/custom_button_2"
        android:id="@+id/button5"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:text="@string/complete_3"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup5"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="@+id/radioGroup5"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup5"
        app:layout_constraintVertical_bias="0.406"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/imageView50" />

    <Button
        android:background="@drawable/custom_button_2"
        android:id="@+id/button6"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:text="@string/good_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.406"
        android:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>