<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-56dp"
        tools:layout_editor_absoluteY="-97dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="279dp"
        android:layout_height="53dp"
        android:text="@string/Question_title_13"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />


    <RadioGroup
        android:id="@+id/radioGroup5"
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:layout_marginTop="120dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/radio13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Option_41" />

        <RadioButton
            android:id="@+id/radio14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Option_42" />

        <RadioButton
            android:id="@+id/radio15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Option_43" />

    </RadioGroup>

    <Button
        android:id="@+id/button5"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_button_2"
        android:text="@string/complete_3"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup5"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="@+id/radioGroup5"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup5"
        app:layout_constraintVertical_bias="0.406" />


</androidx.constraintlayout.widget.ConstraintLayout>